public/stylesheets/snorby.css
/* ... */
#report_table table {
	text-align: left;
	width: 100%;
}

#report_table td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#report_table tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#report_table th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}

/* @end */

/* @group Search */

.search_event_count {
	font-size: small;
	color: #bbb;
	font-style: italic;
}

/*input.search {
	background: #edf2ef url(../images/other/leaf.png) no-repeat 4px 4px;
	padding-left: 25px;
	border: 1px solid #bdc0c0;
	color: rgb(51,51,51);
	font: normal normal normal 12px/normal 'Lucida Grande',Helvetica,Arial,Verdana,sans-serif;
	width: 220px;
}*/

#search_options {
	background-color: #fdffc7;
	border: 1px solid #fef99e;
	color: #373737;
	position: relative;
	padding: 5px 10px;
	float: right;
	margin-top: -10px;
	margin-right: -20px;
}

#edit_search_path {
	width: 800px;
}

#search_options img {
	padding-right: 5px;
	padding-left: 5px;
}

/* @end */

/* @group Settings */

#sensor_settings {
	width: 600px;
	font-size: medium;
	color: #383838;
}

#settings_table_in {
	border: 5px solid #eee;
	overflow: hidden;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

#settings_table table {
	text-align: left;
	width: 100%;
}

#settings_table td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#settings_table tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#settings_table th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}

#settings_menu {
	margin-top: -90px;
}

#settings {
	margin: auto auto 20px;
	min-height: 200px;
}

#user_info {
	float: left;
	background-color: rgba(202,202,202,0.37);
	padding: 10px;
	border: 3px solid rgba(101,101,101,0.53);
}

#b_settings {
	width: 500px;
	margin: auto;
}

/* @end */

/* @group Tune/Important */

#event_options_holder {
	
}

.event_options {
	

/*border: 1px solid rgba(253,247,88,0.49);
	background: #fefbc8 0 bottom;
	color: #373737;*/
	
	position: relative;
	float: right;
	margin-top: 10px;
	background: #fefbc8 0 bottom;
	border: 1px solid #fdfdac;
}

div#event_options_inside {
	padding-right: 5px;
	padding-top: 2px;
	padding-left: 5px;
	border: 1px solid #fff;
}

.event_options img {
	padding-right: 2px;
	padding-left: 2px;
}

/* @end */

/* @group Comments */

.comment_box {
	margin: 20px auto auto;
	background-color: transparent;
	font-size: small;
	max-height: 200px;
	overflow: auto;
	padding-right: 20px;
}

#comments_for {
	color: #363636;
	font-size: small;
	text-align: center;
	

/*background-color: #f2f4f0;
	border: 1px solid rgba(208,213,210,0.63);*/
	margin-bottom: 15px;
}

#comment_form {
	margin-top: 20px;
}

#comments {
	margin-bottom: 5px;
	padding-left: 10px;
	padding-right: 10px;
}

#comment_user_name {
	text-shadow: #f6faff 0 1px 0;
	color: #373737;
	text-transform: capitalize;
	font-size: 1.0em;
	font-weight: bold;
	vertical-align: top;
}

#comment_user_info {
	font-size: 85%;
	min-height: 30px;
	overflow: hidden;
	position: absolute;
	text-overflow: ellipsis;
	top: 10px;
	width: 155px;
	left: 2px;
	float: left;
}

#comment_user_info img {
	float: left;
	margin-right: 5px;
	border-width: 1px;
	border-style: solid;
	width: 30px;
	height: 30px;
}

div#comment_timestamp {
	color: #919191;
	text-transform: capitalize;
	font-style: italic;
	font-size: 0.8em;
}

div#add_comment {
	text-align: right;
}

div#comment_body {
	padding-bottom: 6px;
	padding-right: 10px;
	color: #9a9a9a;
}

#comment_options {
	float: right;
	font-size: 85%;
	min-width: 90px;
	padding: 0px 10px 4px 15px;
	text-align: right;
	color: #babcbc;
}

#comment_options a {
	font-size: xx-small;
	text-decoration: none;
	font-weight: normal;
	font-style: normal;
	font-variant: normal;
	color: #a7a7ab;
}

#comment_options a:hover {
	color: #58595b;
}

.comment {
	min-height: 35px;
	border-top: 1px dotted #e8ebeb;
	overflow: hidden;
	position: relative;
	text-overflow: ellipsis;
	display: block;
	padding: 8px 0px 10px 155px;
}

#comment_text {
	font-size: small;
	color: #2a2a2a;
	margin-bottom: -10px;
}

/* @end */

/* @group Random */

div.visualize {
	border-style: none;
	background-color: #fffeff;
	background-image: none;
}

#hourSlider {
	margin-left: 15px;
}

#minuteSlider {
	margin-left: 23px;
}

.password-strength-bar {
	font-size: 12px;
	width: 50%;
	font-family: arial,sans-serif;
	color: #000;
	height: 15px;
	margin-top: 5px;
	padding: 1px;
}

.password-min-char {
	font-size: 10px;
}

/* @end */

/* @group Tipsy */

.tipsy {
	opacity: .8;
	filter: alpha(opacity=80);
	background-repeat: no-repeat;
	padding: 5px;
	z-index: 999;
}

.tipsy-inner {
	padding: 8px 8px;
	max-width: 200px;
	font: 11px 'Lucida Grande',sans-serif;
	font-weight: bold;
	-moz-border-radius: 4px;
	-khtml-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	background-color: #000;
	color: white;
	text-align: left;
}

.tipsy-north {
	background-image: url(../images/tipsy/tipsy-north.gif);
	background-position: top center;
}

.tipsy-south {
	background-image: url(../images/tipsy/tipsy-south.gif);
	background-position: bottom center;
}

.tipsy-east {
	background-image: url(../images/tipsy/tipsy-east.gif);
	background-position: right center;
}

.tipsy-west {
	background-image: url(../images/tipsy/tipsy-west.gif);
	background-position: left center;
}

.tipsy-inner {
	padding: 10px 15px;
	line-height: 1.5em;
	font-weight: bold;
}

.ie6 .tipsy {
	width: 250px;
}

/* @end */

/* @group User */

div#user_data_and_stats {
	display: block;
	position: relative;
	overflow: hidden;
	width: 100%;
}

div#user_data_info_under {
	display: block;
	position: relative;
	overflow: hidden;
	margin-top: 5px;
}

div#user_data_info {
	text-shadow: #f6faff 1px 1px 1px;
	float: left;
	color: #616263;
	width: 100%;
	padding-left: 5px;
	display: block;
	position: relative;
	overflow: hidden;
}
/* ... */

